// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: HabitForm Snapshot test 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <div>
    <label
      htmlFor="habitName"
    >
      習慣名
    </label>
    <Field
      component="input"
      name="habitName"
      type="text"
    />
  </div>
  <div>
    <Field
      component="select"
      name="repeatType"
      onChange={[Function]}
    >
      <option
        value="dayOfWeek"
      >
        日単位
      </option>
      <option
        value="week"
      >
        週単位
      </option>
      <option
        value="interval"
      >
        インターバル
      </option>
    </Field>
  </div>
  <div>
    <Field
      code={64}
      component={[Function]}
      label="日曜日"
      name="repeatValue"
    />
    <Field
      code={32}
      component={[Function]}
      label="月曜日"
      name="repeatValue"
    />
    <Field
      code={16}
      component={[Function]}
      label="火曜日"
      name="repeatValue"
    />
    <Field
      code={8}
      component={[Function]}
      label="水曜日"
      name="repeatValue"
    />
    <Field
      code={4}
      component={[Function]}
      label="木曜日"
      name="repeatValue"
    />
    <Field
      code={2}
      component={[Function]}
      label="金曜日"
      name="repeatValue"
    />
    <Field
      code={1}
      component={[Function]}
      label="土曜日"
      name="repeatValue"
    />
  </div>
  <div>
    <label
      htmlFor="startedAt"
    >
      開始日
    </label>
    <Field
      component="input"
      name="startedAt"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="targetTime"
    >
      目標時間
    </label>
    <Field
      component="input"
      name="targetTime"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="timeOfDay"
    >
      時間帯
    </label>
    <Field
      component="select"
      name="timeOfDay"
    >
      <option
        value="am"
      >
        午前
      </option>
      <option
        value="pm"
      >
        午後
      </option>
      <option
        value="night"
      >
        夜
      </option>
      <option
        value="always"
      >
        いつでも
      </option>
    </Field>
  </div>
  <button
    type="submit"
  >
    追加する
  </button>
</form>
`;

exports[`Page: HabitForm Snapshot test 2`] = `
<form
  onSubmit={[MockFunction]}
>
  <div>
    <label
      htmlFor="habitName"
    >
      習慣名
    </label>
    <Field
      component="input"
      name="habitName"
      type="text"
    />
  </div>
  <div>
    <Field
      component="select"
      name="repeatType"
      onChange={[Function]}
    >
      <option
        value="dayOfWeek"
      >
        日単位
      </option>
      <option
        value="week"
      >
        週単位
      </option>
      <option
        value="interval"
      >
        インターバル
      </option>
    </Field>
  </div>
  <div>
    <label>
      <Field
        code="1"
        component={[Function]}
        label="週に1回"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="2"
        component={[Function]}
        label="週に2回"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="3"
        component={[Function]}
        label="週に3回"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="4"
        component={[Function]}
        label="週に4回"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="5"
        component={[Function]}
        label="週に5回"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="6"
        component={[Function]}
        label="週に6回"
        name="repeatValue"
      />
    </label>
  </div>
  <div>
    <label
      htmlFor="startedAt"
    >
      開始日
    </label>
    <Field
      component="input"
      name="startedAt"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="targetTime"
    >
      目標時間
    </label>
    <Field
      component="input"
      name="targetTime"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="timeOfDay"
    >
      時間帯
    </label>
    <Field
      component="select"
      name="timeOfDay"
    >
      <option
        value="am"
      >
        午前
      </option>
      <option
        value="pm"
      >
        午後
      </option>
      <option
        value="night"
      >
        夜
      </option>
      <option
        value="always"
      >
        いつでも
      </option>
    </Field>
  </div>
  <button
    type="submit"
  >
    追加する
  </button>
</form>
`;

exports[`Page: HabitForm Snapshot test 3`] = `
<form
  onSubmit={[MockFunction]}
>
  <div>
    <label
      htmlFor="habitName"
    >
      習慣名
    </label>
    <Field
      component="input"
      name="habitName"
      type="text"
    />
  </div>
  <div>
    <Field
      component="select"
      name="repeatType"
      onChange={[Function]}
    >
      <option
        value="dayOfWeek"
      >
        日単位
      </option>
      <option
        value="week"
      >
        週単位
      </option>
      <option
        value="interval"
      >
        インターバル
      </option>
    </Field>
  </div>
  <div>
    <label>
      <Field
        code="2"
        component={[Function]}
        label="2日ごと"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="3"
        component={[Function]}
        label="3日ごと"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="4"
        component={[Function]}
        label="4日ごと"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="5"
        component={[Function]}
        label="5日ごと"
        name="repeatValue"
      />
    </label>
    <label>
      <Field
        code="6"
        component={[Function]}
        label="6日ごと"
        name="repeatValue"
      />
    </label>
  </div>
  <div>
    <label
      htmlFor="startedAt"
    >
      開始日
    </label>
    <Field
      component="input"
      name="startedAt"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="targetTime"
    >
      目標時間
    </label>
    <Field
      component="input"
      name="targetTime"
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="timeOfDay"
    >
      時間帯
    </label>
    <Field
      component="select"
      name="timeOfDay"
    >
      <option
        value="am"
      >
        午前
      </option>
      <option
        value="pm"
      >
        午後
      </option>
      <option
        value="night"
      >
        夜
      </option>
      <option
        value="always"
      >
        いつでも
      </option>
    </Field>
  </div>
  <button
    type="submit"
  >
    追加する
  </button>
</form>
`;
